# Note-Taking

./: Dockerfile  pyproject.toml
apps/: urls.py
apps/notes/: admin.py  models.py  urls.py  views.py
apps/notes/migrations/: 0001_initial.py  0002_note_comment.py  0003_remove_note_comment_alter_note_content.py  0004_note_created_at.py
apps/notes/templates/apps/notes/: detail.html  form.html  index.html
apps/notes/templates/notes/: index.html
devproject/: settings.py  urls.py
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: main.js
templates/: __base.html
