[tool.poetry]
name = "note-taking"
version = "0.1.0"
description = ""
authors = ["Carson Weeks <mail@carsonweeks.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
psycopg2 = "^2.9.3"
django-vite = "^2.0.2"
gunicorn = "^20.1.0"
whitenoise = "^6.0.0"
shortuuid = "^1.0.8"
django-browser-reload = "^1.3.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
